chore:Enable yaml linting.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,5 @@ jobs:
       copyright-skip: true
       style-skip:     true
       release-type:   library
+      yaml-lint-skip: false
     secrets: inherit
